--- a/SentenceComparator.ipynb
+++ b/SentenceComparator.ipynb
@@ -79,13 +79,13 @@
       "    Found existing installation: protobuf 3.20.3\r\n",
       "    Uninstalling protobuf-3.20.3:\r\n",
       "      Successfully uninstalled protobuf-3.20.3\r\n",
-      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
       "tensorflow 2.10.0 requires libclang>=13.0.0, which is not installed.\r\n",
       "tensorflow 2.10.0 requires tensorflow-io-gcs-filesystem>=0.23.1, which is not installed.\r\n",
       "tensorflow 2.10.0 requires protobuf<3.20,>=3.9.2, but you have protobuf 4.21.12 which is incompatible.\r\n",
       "tensorflow-metadata 1.14.0 requires protobuf<4.21,>=3.20.3, but you have protobuf 4.21.12 which is incompatible.\r\n",
-      "tensorboard 2.10.0 requires protobuf<3.20,>=3.9.2, but you have protobuf 4.21.12 which is incompatible.\u001B[0m\u001B[31m\r\n",
-      "\u001B[0mSuccessfully installed protobuf-4.21.12\r\n",
+      "tensorboard 2.10.0 requires protobuf<3.20,>=3.9.2, but you have protobuf 4.21.12 which is incompatible.\u001b[0m\u001b[31m\r\n",
+      "\u001b[0mSuccessfully installed protobuf-4.21.12\r\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -203,11 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "49eb88a4e22fb1ee",
    "metadata": {
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2023-12-12T08:56:35.615719Z",
      "start_time": "2023-12-12T08:37:21.286174Z"
     }
    },
@@ -558,6 +558,13 @@
       "IndexError: list index out of range\n",
       "----------------------------------------\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C received, shutting down server\n"
+     ]
     }
    ],
    "source": [
@@ -674,93 +681,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5ce5770c3909dacf",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-12T08:18:34.052072Z",
-     "start_time": "2023-12-12T08:17:11.336624Z"
-    }
-   },
+   "execution_count": null,
+   "id": "f09ab4fc",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Server running on port 8000\n"
+      "Server running on port 8000\n",
+      "\n",
+      "Input sentence: go\n",
+      "Most tag: CALL\n",
+      "Most similar response: hi\n",
+      "similarity: tensor([[0.3907]])\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "----------------------------------------\n",
-      "Exception occurred during processing of request from ('127.0.0.1', 53188)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/socketserver.py\", line 316, in _handle_request_noblock\n",
-      "    self.process_request(request, client_address)\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/socketserver.py\", line 347, in process_request\n",
-      "    self.finish_request(request, client_address)\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/socketserver.py\", line 360, in finish_request\n",
-      "    self.RequestHandlerClass(request, client_address, self)\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/socketserver.py\", line 747, in __init__\n",
-      "    self.handle()\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/http/server.py\", line 433, in handle\n",
-      "    self.handle_one_request()\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/http/server.py\", line 421, in handle_one_request\n",
-      "    method()\n",
-      "  File \"/var/folders/8s/9fh2s7w53w1fks_4dpp52tyw0000gn/T/ipykernel_88122/4080134473.py\", line 78, in do_POST\n",
-      "    similarities = util.pytorch_cos_sim(input_embedding, response_embeddings)[0]\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/site-packages/sentence_transformers/util.py\", line 28, in pytorch_cos_sim\n",
-      "    return cos_sim(a, b)\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/site-packages/sentence_transformers/util.py\", line 49, in cos_sim\n",
-      "    return torch.mm(a_norm, b_norm.transpose(0, 1))\n",
-      "RuntimeError: mat1 and mat2 shapes cannot be multiplied (1x768 and 0x1)\n",
-      "----------------------------------------\n"
+      "127.0.0.1 - - [12/Dec/2023 17:02:14] \"POST / HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "\n",
+      "Input sentence: go\n",
+      "Most tag: CALL_BACK\n",
+      "Most similar response: Hi boy\n",
+      "similarity: tensor([[0.5074]])\n"
+     ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "----------------------------------------\n",
-      "Exception occurred during processing of request from ('127.0.0.1', 53194)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/socketserver.py\", line 316, in _handle_request_noblock\n",
-      "    self.process_request(request, client_address)\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/socketserver.py\", line 347, in process_request\n",
-      "    self.finish_request(request, client_address)\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/socketserver.py\", line 360, in finish_request\n",
-      "    self.RequestHandlerClass(request, client_address, self)\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/socketserver.py\", line 747, in __init__\n",
-      "    self.handle()\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/http/server.py\", line 433, in handle\n",
-      "    self.handle_one_request()\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/http/server.py\", line 421, in handle_one_request\n",
-      "    method()\n",
-      "  File \"/var/folders/8s/9fh2s7w53w1fks_4dpp52tyw0000gn/T/ipykernel_88122/4080134473.py\", line 78, in do_POST\n",
-      "    similarities = util.pytorch_cos_sim(input_embedding, response_embeddings)[0]\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/site-packages/sentence_transformers/util.py\", line 28, in pytorch_cos_sim\n",
-      "    return cos_sim(a, b)\n",
-      "  File \"/Users/johnny/anaconda3/lib/python3.10/site-packages/sentence_transformers/util.py\", line 49, in cos_sim\n",
-      "    return torch.mm(a_norm, b_norm.transpose(0, 1))\n",
-      "RuntimeError: mat1 and mat2 shapes cannot be multiplied (1x768 and 0x1)\n",
-      "----------------------------------------\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "^C received, shutting down server\n"
+      "127.0.0.1 - - [12/Dec/2023 17:04:20] \"POST / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
+   "source": [
+    "from http.server import BaseHTTPRequestHandler, HTTPServer\n",
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "import mysql.connector\n",
+    "import json\n",
+    "\n",
+    "def connect_to_database():\n",
+    "    connection = mysql.connector.connect(\n",
+    "        host=\"localhost\",\n",
+    "        user=\"root\",\n",
+    "        password=\"3659215fF\",\n",
+    "        database=\"handle_together\"\n",
+    "    )\n",
+    "    return connection\n",
+    "\n",
+    "def send_json_response(self, status_code, data):\n",
+    "    # Convert status_code to integer\n",
+    "    status_code = int(status_code)\n",
+    "\n",
+    "    # Set up the HTTP response\n",
+    "    self.send_response(status_code)\n",
+    "    self.send_header(\"Content-type\", \"application/json\")\n",
+    "    self.end_headers()\n",
+    "\n",
+    "    # Convert the data to JSON\n",
+    "    json_response = json.dumps(data)\n",
+    "\n",
+    "    # Send the JSON response\n",
+    "    self.wfile.write(json_response.encode('utf-8'))\n",
+    "\n",
+    "class WebServerHandler(BaseHTTPRequestHandler):\n",
+    "\n",
+    "    def do_POST(self):       \n",
+    "        # Read the content length from the request headers\n",
+    "        content_length = int(self.headers['Content-Length'])\n",
+    "\n",
+    "        # Read the JSON data from the request body\n",
+    "        post_data = self.rfile.read(content_length)\n",
+    "        json_data_list = json.loads(post_data.decode('utf-8'))\n",
+    "\n",
+    "        if json_data_list:\n",
+    "            json_data = json_data_list[0]\n",
+    "            # Now json_data contains the parameters sent in the JSON format\n",
+    "            tag_array = json_data.get('tag_array', [])\n",
+    "            subject_array = json_data.get('subject_array', [])\n",
+    "            object_array = json_data.get('object_array', [])\n",
+    "            input_sentence = json_data.get('input_sentence', '')       \n",
+    "            public_ind = json_data.get('public_ind', '')\n",
+    "            print()\n",
+    "        # Load the Sentence Transformer model\n",
+    "        model = SentenceTransformer(\"shibing624/text2vec-base-chinese\")\n",
+    "\n",
+    "        # Fetch distinct subject codes from intent_type table\n",
+    "        connection = connect_to_database()\n",
+    "        cursor = connection.cursor()\n",
+    "\n",
+    "        # Use parameterized query to avoid SQL injection\n",
+    "        # query = \"SELECT tag, content FROM intent_training_data WHERE tag IN ({}) AND subject IN ({})\".format(','.join(['%s' for _ in tag_array]), ','.join(['%s' for _ in subject_array]))\n",
+    "        if tag_array and any(tag_array):\n",
+    "            tag_condition = \"tag IN ({})\".format(','.join(['%s' for _ in tag_array]))\n",
+    "        else:\n",
+    "            tag_condition = \"1=1\"  # Always true if tag_array is empty or None\n",
+    "        \n",
+    "        query = (\"SELECT tag, content FROM intent_training_data WHERE {} AND subject IN ({}) AND object IN ({}) AND PUBLIC_IND = '\"+public_ind+\"'\").format(tag_condition, ','.join(['%s' for _ in subject_array]) ,','.join(['%s' for _ in object_array]))\n",
+    "        params = tag_array + subject_array + object_array\n",
+    "        cursor.execute(query, params)\n",
+    "        rows = cursor.fetchall()\n",
+    "        candidate_responses_tags = [row[0] for row in rows]\n",
+    "        candidate_responses = [row[1] for row in rows]\n",
+    "\n",
+    "        cursor.close()\n",
+    "        connection.close()\n",
+    "\n",
+    "        # Encode input sentence and candidate responses\n",
+    "        input_embedding = model.encode([input_sentence])\n",
+    "        response_embedding = model.encode([candidate_responses])\n",
+    "\n",
+    "        response_embeddings = model.encode(candidate_responses)\n",
+    "\n",
+    "        # Calculate cosine similarity between input and responses\n",
+    "        similarities = util.pytorch_cos_sim(input_embedding, response_embeddings)[0]\n",
+    "        \n",
+    "        similarity = util.pytorch_cos_sim(input_embedding, response_embedding)\n",
+    "\n",
+    "        # Get the index of the most similar response\n",
+    "        most_similar_index = similarities.argmax().item()\n",
+    "\n",
+    "        # Print the most similar response\n",
+    "        print(\"Input sentence:\", input_sentence)\n",
+    "        print(\"Most tag:\", candidate_responses_tags[most_similar_index])\n",
+    "        print(\"Most similar response:\", candidate_responses[most_similar_index])\n",
+    "        print(\"similarity:\",similarity)\n",
+    "        result = {\n",
+    "            \"input_sentence\": input_sentence,\n",
+    "            \"tag\": candidate_responses_tags[most_similar_index],\n",
+    "            \"content\": candidate_responses[most_similar_index],\n",
+    "            \"similarity\" : round(similarity.item(),5)\n",
+    "        }\n",
+    "        send_json_response(self, '200', result)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    try:\n",
+    "        port = 8000\n",
+    "        server = HTTPServer(('localhost', port), WebServerHandler)\n",
+    "        server.max_body_length = 10 * 1024 * 1024  # set to 10 MB\n",
+    "\n",
+    "        print(f'Server running on port {port}')\n",
+    "        \n",
+    "        server.serve_forever()\n",
+    "    except KeyboardInterrupt:\n",
+    "        print('^C received, shutting down server')\n",
+    "        server.socket.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c9634f3",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
