--- a/Intent Data Collector.ipynb
+++ b/Intent Data Collector.ipynb
@@ -2,16 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-13T02:11:56.372278Z",
-     "start_time": "2023-12-13T02:11:53.671122Z"
+     "end_time": "2023-12-14T08:41:17.567010Z",
+     "start_time": "2023-12-14T08:41:09.566779Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[12], line 154\u001B[0m\n\u001B[1;32m    151\u001B[0m add_button\u001B[38;5;241m.\u001B[39mpack()\n\u001B[1;32m    153\u001B[0m \u001B[38;5;66;03m# Start the main event loop\u001B[39;00m\n\u001B[0;32m--> 154\u001B[0m \u001B[43mroot\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/anaconda3/lib/python3.10/tkinter/__init__.py:1458\u001B[0m, in \u001B[0;36mMisc.mainloop\u001B[0;34m(self, n)\u001B[0m\n\u001B[1;32m   1456\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mmainloop\u001B[39m(\u001B[38;5;28mself\u001B[39m, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m):\n\u001B[1;32m   1457\u001B[0m     \u001B[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001B[39;00m\n\u001B[0;32m-> 1458\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtk\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mn\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
     "import mysql.connector\n",
@@ -135,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
@@ -277,25 +290,14 @@
     "root.mainloop()\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-13T02:13:01.404832Z",
-     "start_time": "2023-12-13T02:12:00.942178Z"
-    }
+    "collapsed": false
    },
    "id": "794e8015eddf9026"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-12-13 10:14:45.847 python[96176:7528179] TSM AdjustCapsLockLEDForKeyTransitionHandling - _ISSetPhysicalKeyboardCapsLockLED Inhibit\n"
-     ]
-    },
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
@@ -303,7 +305,7 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[3], line 140\u001B[0m\n\u001B[1;32m    137\u001B[0m add_button\u001B[38;5;241m.\u001B[39mpack()\n\u001B[1;32m    139\u001B[0m \u001B[38;5;66;03m# Start the main event loop\u001B[39;00m\n\u001B[0;32m--> 140\u001B[0m \u001B[43mroot\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn[4], line 176\u001B[0m\n\u001B[1;32m    173\u001B[0m add_button\u001B[38;5;241m.\u001B[39mpack()\n\u001B[1;32m    175\u001B[0m \u001B[38;5;66;03m# Start the main event loop\u001B[39;00m\n\u001B[0;32m--> 176\u001B[0m \u001B[43mroot\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
       "File \u001B[0;32m~/anaconda3/lib/python3.10/tkinter/__init__.py:1458\u001B[0m, in \u001B[0;36mMisc.mainloop\u001B[0;34m(self, n)\u001B[0m\n\u001B[1;32m   1456\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mmainloop\u001B[39m(\u001B[38;5;28mself\u001B[39m, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m):\n\u001B[1;32m   1457\u001B[0m     \u001B[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001B[39;00m\n\u001B[0;32m-> 1458\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtk\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mn\u001B[49m\u001B[43m)\u001B[49m\n",
       "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
@@ -454,8 +456,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-13T02:19:58.485030Z",
-     "start_time": "2023-12-13T02:14:26.030140Z"
+     "end_time": "2023-12-14T08:57:34.885173Z",
+     "start_time": "2023-12-14T08:56:31.630671Z"
     }
    },
    "id": "fb0f32e8019ad5be"
@@ -622,26 +624,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
-    "ExecuteTime": {
-     "start_time": "2023-12-13T03:15:09.449399Z"
-    }
+    "is_executing": true
    },
    "id": "31f6cfbd199d582"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-13T03:14:47.655499Z",
-     "start_time": "2023-12-13T03:14:47.621182Z"
-    }
-   },
-   "id": "39480c0002110457"
   },
   {
    "cell_type": "code",
@@ -651,7 +636,189 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "fcb09ce0bab5d39b"
+   "id": "39480c0002110457"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "import mysql.connector\n",
+    "\n",
+    "def connect_to_database():\n",
+    "    # Modify the database connection details as needed\n",
+    "    connection = mysql.connector.connect(\n",
+    "        host=\"localhost\",\n",
+    "        user=\"root\",\n",
+    "        password=\"3659215fF\",\n",
+    "        database=\"handle_together\"\n",
+    "    )\n",
+    "    return connection\n",
+    "\n",
+    "def update_radio_buttons():\n",
+    "    # Update radio buttons based on the selected subject\n",
+    "    subject = selected_subject.get()\n",
+    "    connection = connect_to_database()\n",
+    "    cursor = connection.cursor()\n",
+    "    cursor.execute(\"SELECT intent_type FROM intent_type WHERE subject_code = %s\", (subject,))\n",
+    "    intent_types = [row[0] for row in cursor.fetchall()]\n",
+    "    cursor.close()\n",
+    "    connection.close()\n",
+    "\n",
+    "    for widget in radio_frame.winfo_children():\n",
+    "        widget.destroy()\n",
+    "\n",
+    "    # Create a scrollbar for the radio_frame\n",
+    "    scrollbar = tk.Scrollbar(radio_frame)\n",
+    "    scrollbar.pack(side=tk.RIGHT, fill=tk.Y)\n",
+    "\n",
+    "    # Create a listbox to hold the Radiobuttons with the scrollbar\n",
+    "    listbox = tk.Listbox(radio_frame, yscrollcommand=scrollbar.set, selectmode=tk.SINGLE, font=(\"Helvetica\", 14))\n",
+    "    listbox.pack(expand=True, fill=tk.BOTH)\n",
+    "\n",
+    "    for intent_type in intent_types:\n",
+    "        listbox.insert(tk.END, intent_type)\n",
+    "\n",
+    "    scrollbar.config(command=listbox.yview)\n",
+    "\n",
+    "    selected_intent_type.set(intent_types[0] if intent_types else \"\")\n",
+    "\n",
+    "def add_data():\n",
+    "    # Add data to the database based on user input\n",
+    "    subject = selected_subject.get()\n",
+    "    intent_type = selected_intent_type.get()\n",
+    "    object_type = selected_object_type.get()\n",
+    "\n",
+    "    # Check if content_entry exists\n",
+    "    if content_entry:\n",
+    "        content = content_entry.get()\n",
+    "    else:\n",
+    "        content = None\n",
+    "\n",
+    "    # Check if checkboxes are selected\n",
+    "    command_ind = 'Y' if command_checkbox.get() else 'N'\n",
+    "    public_ind = 'Y' if public_checkbox.get() else 'N'\n",
+    "\n",
+    "    if not content:\n",
+    "        print(\"Content is missing. Please enter content.\")\n",
+    "        return\n",
+    "\n",
+    "    connection = connect_to_database()\n",
+    "    cursor = connection.cursor()\n",
+    "\n",
+    "    # Insert the data into the intent_training_data table\n",
+    "    query = \"INSERT INTO intent_training_data (subject, object, tag, content, command_ind, public_ind, active_ind) VALUES (%s, %s, %s, %s, %s, %s, 'Y')\"\n",
+    "    data = (subject, object_type, intent_type, content, command_ind, public_ind)\n",
+    "\n",
+    "    cursor.execute(query, data)\n",
+    "    connection.commit()\n",
+    "\n",
+    "    cursor.close()\n",
+    "    connection.close()\n",
+    "\n",
+    "    # Show confirmation message for 2 seconds\n",
+    "    confirmation_label.config(text=\"Data saved successfully!\")\n",
+    "    root.after(2000, clear_confirmation_message)\n",
+    "\n",
+    "def clear_confirmation_message():\n",
+    "    # Clear the confirmation message\n",
+    "    confirmation_label.config(text=\"\")\n",
+    "\n",
+    "def open_add_frame():\n",
+    "    global selected_subject, selected_intent_type, selected_object_type, content_entry, command_checkbox, public_checkbox, confirmation_label, radio_frame\n",
+    "\n",
+    "    add_window = tk.Toplevel(root)\n",
+    "    add_window.title(\"Add Data\")\n",
+    "\n",
+    "    # Create and configure widgets for the Add Data frame\n",
+    "    add_label = tk.Label(add_window, text=\"Add Data\", font=(\"Helvetica\", 16))\n",
+    "    add_label.pack()\n",
+    "\n",
+    "    # Fetch distinct subject codes from intent_type table\n",
+    "    connection = connect_to_database()\n",
+    "    cursor = connection.cursor()\n",
+    "    cursor.execute(\"SELECT DISTINCT subject_code FROM intent_type\")\n",
+    "    subject_codes = [row[0] for row in cursor.fetchall()]\n",
+    "    cursor.close()\n",
+    "    connection.close()\n",
+    "\n",
+    "    # Create variables to store the selected subject code and object type\n",
+    "    selected_subject = tk.StringVar()\n",
+    "    selected_object_type = tk.StringVar()\n",
+    "\n",
+    "    # Create a label and dropdown menu to select a subject code\n",
+    "    subject_label = tk.Label(add_window, text=\"Select Subject Code:\", font=(\"Helvetica\", 14))\n",
+    "    subject_label.pack()\n",
+    "    subject_dropdown = tk.OptionMenu(add_window, selected_subject, *subject_codes)\n",
+    "    subject_dropdown.pack()\n",
+    "\n",
+    "    # Create a frame to hold the radio buttons (no need for global radio_frame)\n",
+    "    radio_frame = tk.Frame(add_window)\n",
+    "    radio_frame.pack()\n",
+    "\n",
+    "    # Create a variable to store the selected intent type\n",
+    "    selected_intent_type = tk.StringVar()\n",
+    "\n",
+    "    # Create a label and dropdown menu to select an object type\n",
+    "    object_label = tk.Label(add_window, text=\"Select Object Type:\", font=(\"Helvetica\", 14))\n",
+    "    object_label.pack()\n",
+    "    object_dropdown = tk.OptionMenu(add_window, selected_object_type, *subject_codes)\n",
+    "    object_dropdown.pack()\n",
+    "\n",
+    "    # Create a button to fetch and show intent types based on the selected subject code\n",
+    "    show_intent_types_button = tk.Button(add_window, text=\"Show Intent Types\", command=update_radio_buttons, font=(\"Helvetica\", 14))\n",
+    "    show_intent_types_button.pack()\n",
+    "\n",
+    "    # Create an entry for content with a larger size and font\n",
+    "    content_label = tk.Label(add_window, text=\"Content:\", font=(\"Helvetica\", 14))\n",
+    "    content_label.pack()\n",
+    "    content_entry = tk.Entry(add_window, font=(\"Helvetica\", 16), width=40)\n",
+    "    content_entry.pack()\n",
+    "\n",
+    "    # Create checkboxes for command_ind and public_ind\n",
+    "    command_checkbox = tk.BooleanVar()\n",
+    "    public_checkbox = tk.BooleanVar()\n",
+    "\n",
+    "    command_checkbox_label = tk.Checkbutton(add_window, text=\"Command Indicator\", variable=command_checkbox, font=(\"Helvetica\", 14))\n",
+    "    command_checkbox_label.pack()\n",
+    "\n",
+    "    public_checkbox_label = tk.Checkbutton(add_window, text=\"Public Indicator\", variable=public_checkbox, font=(\"Helvetica\", 14))\n",
+    "    public_checkbox_label.pack()\n",
+    "\n",
+    "    # Create a label for displaying confirmation message\n",
+    "    confirmation_label = tk.Label(add_window, text=\"\", font=(\"Helvetica\", 14), fg=\"green\")\n",
+    "    confirmation_label.pack()\n",
+    "\n",
+    "    # Create a button to save the data\n",
+    "    save_button = tk.Button(add_window, text=\"Save\", command=add_data, font=(\"Helvetica\", 14))\n",
+    "    save_button.pack()\n",
+    "\n",
+    "# Initialize the main application window\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Data Management\")\n",
+    "\n",
+    "# Create a button to open the \"Add Data\" frame\n",
+    "add_button = tk.Button(root, text=\"Add\", command=open_add_frame, font=(\"Helvetica\", 14))\n",
+    "add_button.pack()\n",
+    "\n",
+    "# Start the main event loop\n",
+    "root.mainloop()\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d7c979463eaea4e0"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "912c16774ac0229a"
   }
  ],
  "metadata": {
