--- a/SentenceComparator.ipynb
+++ b/SentenceComparator.ipynb
@@ -79,13 +79,13 @@
       "    Found existing installation: protobuf 3.20.3\r\n",
       "    Uninstalling protobuf-3.20.3:\r\n",
       "      Successfully uninstalled protobuf-3.20.3\r\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
+      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
       "tensorflow 2.10.0 requires libclang>=13.0.0, which is not installed.\r\n",
       "tensorflow 2.10.0 requires tensorflow-io-gcs-filesystem>=0.23.1, which is not installed.\r\n",
       "tensorflow 2.10.0 requires protobuf<3.20,>=3.9.2, but you have protobuf 4.21.12 which is incompatible.\r\n",
       "tensorflow-metadata 1.14.0 requires protobuf<4.21,>=3.20.3, but you have protobuf 4.21.12 which is incompatible.\r\n",
-      "tensorboard 2.10.0 requires protobuf<3.20,>=3.9.2, but you have protobuf 4.21.12 which is incompatible.\u001b[0m\u001b[31m\r\n",
-      "\u001b[0mSuccessfully installed protobuf-4.21.12\r\n",
+      "tensorboard 2.10.0 requires protobuf<3.20,>=3.9.2, but you have protobuf 4.21.12 which is incompatible.\u001B[0m\u001B[31m\r\n",
+      "\u001B[0mSuccessfully installed protobuf-4.21.12\r\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -683,14 +683,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f09ab4fc",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2023-12-13T05:09:52.814356Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Server running on port 8000\n",
-      "\n",
       "Input sentence: go\n",
       "Most tag: CALL\n",
       "Most similar response: hi\n",
@@ -701,14 +705,81 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [12/Dec/2023 17:02:14] \"POST / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [13/Dec/2023 13:11:01] \"POST / HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "Input sentence: go\n",
+      "Most tag: CALL\n",
+      "Most similar response: hi\n",
+      "similarity: tensor([[0.3907]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/Dec/2023 13:18:50] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input sentence: go\n",
+      "Most tag: CALL\n",
+      "Most similar response: hi\n",
+      "similarity: tensor([[0.3907]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/Dec/2023 13:31:48] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input sentence: go\n",
+      "Most tag: CALL\n",
+      "Most similar response: hi\n",
+      "similarity: tensor([[0.3907]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/Dec/2023 13:34:52] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input sentence: go\n",
+      "Most tag: CALL\n",
+      "Most similar response: hi\n",
+      "similarity: tensor([[0.3907]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/Dec/2023 13:37:33] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Input sentence: go\n",
       "Most tag: CALL_BACK\n",
       "Most similar response: Hi boy\n",
@@ -719,7 +790,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [12/Dec/2023 17:04:20] \"POST / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [13/Dec/2023 13:37:37] \"POST / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
