--- a/SentenceComparator.ipynb
+++ b/SentenceComparator.ipynb
@@ -348,12 +348,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f09ab4fc",
    "metadata": {
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2023-12-14T09:58:46.037704Z",
-     "start_time": "2023-12-14T09:57:25.809014Z"
+     "start_time": "2023-12-18T02:36:50.855318Z"
     }
    },
    "outputs": [
@@ -372,7 +372,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [14/Dec/2023 17:57:59] \"POST / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [18/Dec/2023 10:37:24] \"POST / HTTP/1.1\" 200 -\n"
      ]
     },
     {
@@ -389,14 +389,143 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [14/Dec/2023 17:58:02] \"POST / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [18/Dec/2023 10:37:26] \"POST / HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^C received, shutting down server\n"
+      "Input sentence: 各位想看什麼呀\n",
+      "Most tag: ASK_HOW_TO_PLAY\n",
+      "Most similar response: 各位想要看什麼呢\n",
+      "similarity: tensor([[0.4350]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [18/Dec/2023 10:37:59] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input sentence: 各位想看什麼表演呀\n",
+      "Most tag: ASK_HOW_TO_PLAY\n",
+      "Most similar response: 各位想要看什麼呢\n",
+      "similarity: tensor([[0.4709]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [18/Dec/2023 10:38:12] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input sentence: 各位想看什麼表演呀\n",
+      "Most tag: ASK_HOW_TO_PLAY\n",
+      "Most similar response: 各位想要看什麼呢\n",
+      "similarity: tensor([[0.4709]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [18/Dec/2023 10:39:55] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input sentence: 各位想看什麼表演呀\n",
+      "Most tag: ASK_HOW_TO_PLAY\n",
+      "Most similar response: 各位想要看什麼呢\n",
+      "similarity: tensor([[0.4709]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [18/Dec/2023 10:41:53] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input sentence: 各位想看什麼表演呀\n",
+      "Most tag: ASK_HOW_TO_PLAY\n",
+      "Most similar response: 各位想要看什麼呢\n",
+      "similarity: tensor([[0.4709]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [18/Dec/2023 10:44:58] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input sentence: 各位想看什麼表演呀\n",
+      "Most tag: ASK_HOW_TO_PLAY\n",
+      "Most similar response: 各位想要看什麼呢\n",
+      "similarity: tensor([[0.4709]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [18/Dec/2023 10:47:49] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input sentence: 各位想看什麼表演呀\n",
+      "Most tag: ASK_HOW_TO_PLAY\n",
+      "Most similar response: 各位想要看什麼呢\n",
+      "similarity: tensor([[0.4709]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [18/Dec/2023 10:51:35] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input sentence: 各位想看什麼表演呀\n",
+      "Most tag: ASK_HOW_TO_PLAY\n",
+      "Most similar response: 各位想要看什麼呢\n",
+      "similarity: tensor([[0.4709]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [18/Dec/2023 11:02:22] \"POST / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
