--- a/Intent Data Collector.ipynb
+++ b/Intent Data Collector.ipynb
@@ -2,29 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-14T08:41:17.567010Z",
-     "start_time": "2023-12-14T08:41:09.566779Z"
+     "end_time": "2023-12-18T06:59:30.440433Z",
+     "start_time": "2023-12-18T06:59:15.285409Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[12], line 154\u001B[0m\n\u001B[1;32m    151\u001B[0m add_button\u001B[38;5;241m.\u001B[39mpack()\n\u001B[1;32m    153\u001B[0m \u001B[38;5;66;03m# Start the main event loop\u001B[39;00m\n\u001B[0;32m--> 154\u001B[0m \u001B[43mroot\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/anaconda3/lib/python3.10/tkinter/__init__.py:1458\u001B[0m, in \u001B[0;36mMisc.mainloop\u001B[0;34m(self, n)\u001B[0m\n\u001B[1;32m   1456\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mmainloop\u001B[39m(\u001B[38;5;28mself\u001B[39m, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m):\n\u001B[1;32m   1457\u001B[0m     \u001B[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001B[39;00m\n\u001B[0;32m-> 1458\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtk\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mn\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "import mysql.connector\n",
@@ -824,18 +811,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[2], line 176\u001B[0m\n\u001B[1;32m    173\u001B[0m add_button\u001B[38;5;241m.\u001B[39mpack()\n\u001B[1;32m    175\u001B[0m \u001B[38;5;66;03m# Start the main event loop\u001B[39;00m\n\u001B[0;32m--> 176\u001B[0m \u001B[43mroot\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/anaconda3/lib/python3.10/tkinter/__init__.py:1458\u001B[0m, in \u001B[0;36mMisc.mainloop\u001B[0;34m(self, n)\u001B[0m\n\u001B[1;32m   1456\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mmainloop\u001B[39m(\u001B[38;5;28mself\u001B[39m, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m):\n\u001B[1;32m   1457\u001B[0m     \u001B[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001B[39;00m\n\u001B[0;32m-> 1458\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtk\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmainloop\u001B[49m\u001B[43m(\u001B[49m\u001B[43mn\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-19 10:02:28.612 python[51306:375948] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2023-12-19 10:02:28.613 python[51306:375948] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2023-12-19 10:02:28.613 python[51306:375948] Text input context does not respond to _valueForTIProperty:\n",
+      "2023-12-19 10:02:28.614 python[51306:375948] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2023-12-19 10:02:28.614 python[51306:375948] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2023-12-19 10:02:28.614 python[51306:375948] Text input context does not respond to _valueForTIProperty:\n",
+      "2023-12-19 10:02:30.720 python[51306:375948] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2023-12-19 10:02:30.720 python[51306:375948] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2023-12-19 10:02:30.720 python[51306:375948] Text input context does not respond to _valueForTIProperty:\n",
+      "2023-12-19 10:02:30.721 python[51306:375948] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2023-12-19 10:02:30.721 python[51306:375948] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2023-12-19 10:02:30.721 python[51306:375948] Text input context does not respond to _valueForTIProperty:\n",
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -1020,8 +1016,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-18T03:17:16.594076Z",
-     "start_time": "2023-12-18T03:15:57.083Z"
+     "end_time": "2023-12-19T02:25:56.388018Z",
+     "start_time": "2023-12-19T02:02:23.660447Z"
     }
    },
    "id": "912c16774ac0229a"
