--- a/SentenceComparator.ipynb
+++ b/SentenceComparator.ipynb
@@ -2307,6 +2307,42 @@
      "text": [
       "127.0.0.1 - - [19/Dec/2023 10:12:49] \"POST / HTTP/1.1\" 200 -\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected Response: 各位有沒有特別想看的\n",
+      "Input sentence: 你們覺得怎麼樣\n",
+      "Most tag: ASK_TO_PLAY\n",
+      "Most similar response: 要不要秀一段給你們看呀\n",
+      "similarity: tensor([[0.4433]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [19/Dec/2023 11:42:47] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected Response: 不要\n",
+      "Input sentence: 你們覺得怎麼樣\n",
+      "Most tag: REJECT\n",
+      "Most similar response: 想看別的\n",
+      "similarity: tensor([[0.4628]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [19/Dec/2023 11:42:50] \"POST / HTTP/1.1\" 200 -\n"
+     ]
     }
    ],
    "source": [
