--- a/Intent Data Collector.ipynb
+++ b/Intent Data Collector.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-18T06:59:30.440433Z",
-     "start_time": "2023-12-18T06:59:15.285409Z"
+     "end_time": "2023-12-19T05:55:54.287077Z",
+     "start_time": "2023-12-19T05:55:51.613756Z"
     }
    },
    "outputs": [],
@@ -811,30 +811,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-12-19 10:02:28.612 python[51306:375948] _TIPropertyValueIsValid called with 4 on nil context!\n",
-      "2023-12-19 10:02:28.613 python[51306:375948] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
-      "2023-12-19 10:02:28.613 python[51306:375948] Text input context does not respond to _valueForTIProperty:\n",
-      "2023-12-19 10:02:28.614 python[51306:375948] _TIPropertyValueIsValid called with 4 on nil context!\n",
-      "2023-12-19 10:02:28.614 python[51306:375948] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
-      "2023-12-19 10:02:28.614 python[51306:375948] Text input context does not respond to _valueForTIProperty:\n",
-      "2023-12-19 10:02:30.720 python[51306:375948] _TIPropertyValueIsValid called with 4 on nil context!\n",
-      "2023-12-19 10:02:30.720 python[51306:375948] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
-      "2023-12-19 10:02:30.720 python[51306:375948] Text input context does not respond to _valueForTIProperty:\n",
-      "2023-12-19 10:02:30.721 python[51306:375948] _TIPropertyValueIsValid called with 4 on nil context!\n",
-      "2023-12-19 10:02:30.721 python[51306:375948] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
-      "2023-12-19 10:02:30.721 python[51306:375948] Text input context does not respond to _valueForTIProperty:\n",
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import ttk\n",
@@ -1015,9 +993,9 @@
    ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2023-12-19T02:25:56.388018Z",
-     "start_time": "2023-12-19T02:02:23.660447Z"
+     "start_time": "2023-12-19T08:21:04.732297Z"
     }
    },
    "id": "912c16774ac0229a"
