--- a/Intent Data Collector.ipynb
+++ b/Intent Data Collector.ipynb
@@ -812,7 +812,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-20 16:22:29.765 python[1941:40373] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2023-12-20 16:22:29.766 python[1941:40373] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2023-12-20 16:22:29.766 python[1941:40373] Text input context does not respond to _valueForTIProperty:\n",
+      "2023-12-20 16:22:29.768 python[1941:40373] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2023-12-20 16:22:29.768 python[1941:40373] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2023-12-20 16:22:29.768 python[1941:40373] Text input context does not respond to _valueForTIProperty:\n",
+      "2023-12-20 16:22:29.770 python[1941:40373] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2023-12-20 16:22:29.770 python[1941:40373] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2023-12-20 16:22:29.770 python[1941:40373] Text input context does not respond to _valueForTIProperty:\n",
+      "2023-12-20 16:22:35.723 python[1941:40373] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2023-12-20 16:22:35.723 python[1941:40373] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2023-12-20 16:22:35.723 python[1941:40373] Text input context does not respond to _valueForTIProperty:\n",
+      "2023-12-20 16:22:35.724 python[1941:40373] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2023-12-20 16:22:35.724 python[1941:40373] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2023-12-20 16:22:35.724 python[1941:40373] Text input context does not respond to _valueForTIProperty:\n",
+      "2023-12-20 16:22:38.021 python[1941:40373] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2023-12-20 16:22:38.021 python[1941:40373] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2023-12-20 16:22:38.021 python[1941:40373] Text input context does not respond to _valueForTIProperty:\n",
+      "2023-12-20 16:22:38.022 python[1941:40373] _TIPropertyValueIsValid called with 4 on nil context!\n",
+      "2023-12-20 16:22:38.023 python[1941:40373] imkxpc_getApplicationProperty:reply: called with incorrect property value 4, bailing.\n",
+      "2023-12-20 16:22:38.023 python[1941:40373] Text input context does not respond to _valueForTIProperty:\n"
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import ttk\n",
@@ -995,7 +1023,7 @@
     "collapsed": false,
     "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2023-12-19T08:21:04.732297Z"
+     "start_time": "2023-12-20T08:22:29.449905Z"
     }
    },
    "id": "912c16774ac0229a"
